<resources>
    <string name="app_name">Museum Helper</string>
    <string name="titleText">Музейный помощник</string>
    <string name="btnRegistration">Войти</string>
    <string name="btnExhibit">Экспонаты</string>
    <string name="btnAuthor">Авторы</string>
    <string name="btnMuseum">Музеи</string>
    <string name="btnExhibition">Залы</string>
    <string name="btnConfirm">Войти</string>
    <string name="textRegistration">Вход в систему</string>
    <string name="hintLogin">Логин</string>
    <string name="hintPassword">Пароль</string>
    <string name="cd_back">Назад</string>
    <string name="cd_home">Главное меню</string>
    <string name="cd_logout">Выйти</string>
    <string name="cd_author_photo">Фотография автора</string>
    <string name="cd_exhibit_image">Изображение экспоната</string>
    <string name="subtitle_main">Система управления музеем</string>
    <string name="subtitle_card_exhibits">Поиск, добавление, редактирование</string>
    <string name="subtitle_card_authors">Биографии и фотографии</string>
    <string name="subtitle_card_museums">Адреса и контакты</string>
    <string name="subtitle_card_halls">Залы и хранилища</string>
    <string name="arrow_right">›</string>
    <string name="hint_email">Email</string>
    <string name="title_add_author">Добавить автора</string>
    <string name="title_edit_author">Редактировать автора</string>
    <string name="title_add_exhibit">Добавить экспонат</string>
    <string name="title_edit_exhibit">Редактировать экспонат</string>
    <string name="title_add_hall">Добавить зал</string>
    <string name="title_edit_hall">Редактировать зал</string>
    <string name="title_add_museum">Добавить музей</string>
    <string name="title_edit_museum">Редактировать музей</string>
    <string name="title_author">Автор</string>
    <string name="title_exhibit">Экспонат</string>
    <string name="title_hall">Зал</string>
    <string name="title_museum">Музей</string>
    <string name="title_author_management">Управление авторами</string>
    <string name="title_exhibit_management">Управление экспонатами</string>
    <string name="title_hall_management">Управление залами</string>
    <string name="title_museum_management">Управление музеями</string>
    <string name="label_search_authors">Поиск авторов</string>
    <string name="label_search_exhibits">Поиск экспонатов</string>
    <string name="label_search_halls">Поиск залов</string>
    <string name="label_search_museums">Поиск музеев</string>
    <string name="label_search_results">Результаты поиска</string>
    <string name="label_author_exhibits">Экспонаты автора</string>
    <string name="label_hall_exhibits">Экспонаты в этом зале</string>
    <string name="label_museum_halls">Залы музея</string>
    <string name="label_author_name">Имя автора</string>
    <string name="label_biography">Биография</string>
    <string name="label_life_dates">Даты жизни</string>
    <string name="label_photo">Фотография</string>
    <string name="label_exhibit_title">Название экспоната</string>
    <string name="label_description">Описание</string>
    <string name="label_author_colon">Автор:</string>
    <string name="label_hall_colon">Зал:</string>
    <string name="label_museum_colon">Музей:</string>
    <string name="label_museum_name">Название музея</string>
    <string name="label_image">Изображение</string>
    <string name="label_museum_required">Музей *</string>
    <string name="label_hall_optional">Зал (опционально)</string>
    <string name="label_website">Веб-сайт:</string>
    <string name="text_no_website">Сайт не указан</string>
    <string name="text_no_halls">Залы не найдены</string>
    <string name="text_no_exhibits">Экспонаты не найдены</string>
    <string name="btn_search">Найти</string>
    <string name="btn_reset">Сбросить</string>
    <string name="btn_add">Добавить</string>
    <string name="btn_edit">Редактировать</string>
    <string name="btn_delete">Удалить</string>
    <string name="btn_save_changes">Сохранить изменения</string>
    <string name="btn_save">Сохранить</string>
    <string name="checkbox_is_storage">Хранилище (не выставочный зал)</string>
    <string name="hint_author_name">Имя автора *</string>
    <string name="hint_exhibit_title">Название экспоната *</string>
    <string name="hint_creation_year">Год создания</string>
    <string name="hint_photo_url">Ссылка на фото (URL)</string>
    <string name="hint_image_url">Ссылка на фото</string>
    <string name="hint_birth_date">Дата рождения</string>
    <string name="hint_death_date">Дата смерти</string>
    <string name="hint_hall_number">Номер зала</string>
    <string name="hint_hall_name">Название зала</string>
    <string name="hint_museum_name">Название музея *</string>
    <string name="hint_city">Город *</string>
    <string name="hint_country">Страна *</string>
    <string name="hint_address">Адрес *</string>
    <string name="hint_website">Веб-сайт (URL)</string>
    <string name="hint_search_title">Название</string>
    <string name="hint_search_city">Город</string>
</resources>